--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	   <h1>Welcome to Accio Jobs! </h1>
+	<a href="https://acciojob.com/blog/">Blog </a>
+	<br>
+	<img src="nathan-roser-XX0vmOvQ3GA-unsplash.jpg" alt="Img" height="200px">
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+    <p>We can say that optimization is...</p>
+	 <br>
+    <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"
+      >DSA vs. Competitive Programming</a
+    >
+    <p>DSA or Competitive programming?...</p>
+
+    <img src="siim-lukka-X-Far-t1woI-unsplash.jpg" alt="img3" height="200px" />
+    <br>
+    <a href="https://acciojob.com/blog/untitled-19/"
+      >Complete Guide on FlexBox</a
+    >
+    <p>As a job seeker, you may wonder...</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
