--- a/main.html
+++ b/main.html
@@ -8,20 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	   <h1>Welcome to Accio Jobs! </h1>
-	<a href="https://acciojob.com/blog/">Blog </a>
-	<br>
-	<img src="nathan-roser-XX0vmOvQ3GA-unsplash.jpg" alt="Img" height="200px">
-	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+	  <h1>Welcome to Accio Jobs!</h1>
+    <a href="https://acciojob.com/blog/">Blog </a>
+    <br />
+    <img
+      class="img1"
+      src="https://images.unsplash.com/photo-1682687220336-bbd659a734e7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwzNnx8fGVufDB8fHx8fA%3D%3D"
+      alt="Img"
+      height="200px"
+    />
+    <br />
+    <a href="https://acciojob.com/blog/brute-force-vs-optimization/"
+      >Brute Force vs. Optimization</a
+    >
     <p>We can say that optimization is...</p>
-	 <br>
+    <br />
+    <img
+      class="img2"
+      height="200px"
+      src="https://images.unsplash.com/photo-1683009427513-28e163402d16?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw1MXx8fGVufDB8fHx8fA%3D%3D"
+      alt="img2"
+    />
+    <br />
     <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"
       >DSA vs. Competitive Programming</a
     >
     <p>DSA or Competitive programming?...</p>
 
-    <img src="siim-lukka-X-Far-t1woI-unsplash.jpg" alt="img3" height="200px" />
-    <br>
+    <img
+      src="https://images.unsplash.com/photo-1702501725284-68647b625bd0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1NXx8fGVufDB8fHx8fA%3D%3D"
+      alt="img3"
+      height="200px"
+    />
+    <br />
     <a href="https://acciojob.com/blog/untitled-19/"
       >Complete Guide on FlexBox</a
     >
