--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <marquee>
 	   <h1>
       <a
         href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90"
@@ -15,6 +16,7 @@
         Welcome to Accio Jobs!</a
       >
     </h1>
+	 </marquee>
     <a href="https://acciojob.com/blog/">Blog </a>
     <br />
     <img
