--- a/main.html
+++ b/main.html
@@ -10,11 +10,7 @@
 	<!-- the entire body must be written by student -->
 	 <marquee>
 	   <h1>
-      <a
-        href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90"
-      >
-        Welcome to Accio Jobs!</a
-      >
+   Welcome to Accio Jobs!
     </h1>
 	 </marquee>
     <a href="https://acciojob.com/blog/">Blog </a>
