--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 <marquee>
-	   <h1>
-   Welcome to Accio Jobs!
-    </h1>
+	   <h1> Welcome to Accio Jobs! </h1>
 	 </marquee>
     <a href="https://acciojob.com/blog/">Blog </a>
     <br />
