--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <marquee>
-	   <h1> Welcome to Accio Jobs!</h1>
-	 </marquee>
-  <h1><a href="https://acciojob.com/blog/">Blog </a></h1>  
+	 <div>
+    <marquee>
+        <h1>Welcome to Accio Jobs!</h1>
+    </marquee>
+</div>
+  <a href="https://acciojob.com/blog/">Blog </a>
+	<h1>Accio Job's Blog</h1>
     <br />
     <img
       class="img1"
